--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express-rate-limit": "^7.0.2",
+    "google-auth-library": "^9.1.0",
     "mongoose": "^7.5.3",
     "nodemailer": "^6.9.6"
   }
